--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
